JavaScript_FastAPI/static/css/styles.css
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-family: 'Poppins', sans-serif;
}

body {
    width: 100%;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    background-color: #F9F9F9;
}

.wrapper {
    width: 70%;
    max-width: 600px;
    min-width: 300px;
    height: auto;
    background-color: #FFFFFF;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 30px 50px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    border-radius: 10px;
}

.wrapper #city{
    padding: 1px 5px;
    border: none;
    background: transparent;
    border-bottom: 1.3px solid #232323;
    color: #232323;
    outline: none;
    font-size: 14px;
    min-width: 0;
    width: 100%;
}

.search-bar{
    display: flex;
    gap: 10px;
    align-items: center;
    width: 100%;
    max-width: 600px;

}

.wrapper .search-button{
    background-color: #4A90E2;
    color: #FFFFFF; 
    border: none;
    padding: 5px 10px;
    cursor: pointer;
    font-weight: 500;
    text-wrap: nowrap;
    border-radius: 4px;
}

input::placeholder{
    font-family: 'Poppins', sans-serif;
}


.weather-info{
    display: flex;
    margin-top: 30px;
    width: 100%;
    flex-wrap: wrap;
    gap: 20px;
}

.section-left, .section-right {
    flex: 1;
    min-width: 200px;
}

